# Ordo_API

./: .coverage  .dockerignore  .env  .gitignore  compose.yml  database.db  dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
migrations/: env.py
migrations/versions/: 39d783bd1efb_create_task_tables_and_adding_.py  43a8d8d0f66f_create_tasks_tables.py  458aa891c0d3_adding_column_update_at_in_users.py  4a539d8108fc_fixed_subclass_bug.py  57b9fe958b88_adding_correctly_roles_in_users_table.py  6d8476ebbed9_adding_created_at_and_updated_at_in_.py  8c1c9997e122_new_initial_migration.py  93a7d53898d2_adding_relationship_with_characters_.py  9ac476c93308_modifying_character_table.py  b3d0ce5888c8_adding_created_at_and_updated_at_in_.py  b426614c6a64_removing_task_tables.py  cb2d7a2c268f_create_tasks_tables.py  cfb0711103cf_create_charactes_table.py  f2e02a6ca885_create_users_table.py
ordo_fast/: app.py  database.py  enums.py  models.py  schemas.py  security.py  settings.py
ordo_fast/routers/: auth.py  characters.py  task.py  users.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_characters.py  test_db.py  test_security.py  test_task.py  test_users.py
